# rmarcher

./: .gitignore  Cargo.toml  LICENSE  README.md  test
scenes/: insidemirror.lua  randomspheres.lua  smolgalaxy.lua  tsm.lua
src/: consts.rs  light.rs  main.rs  material.rs
src/lua/: color.rs  light.rs  mat3.rs  material.rs  mod.rs  obj.rs  transform.rs  util.lua  util.rs  vec3.rs
src/object/: cuboid.rs  cylinder.rs  exclusion.rs  intersection.rs  mod.rs  negation.rs  plane.rs  scene.rs  smoothunion.rs  sphere.rs  torus.rs  transform.rs  union.rs  waves.rs  with_lights.rs  with_material.rs
src/structs/: cam.rs  mat3.rs  mat_n.rs  mod.rs  ray.rs  vec3.rs  vec_n.rs
