[package]
name = "rmarcher"
version = "0.1.0"
authors = ["codinget"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
crossbeam-channel = "0.5.0"
crossbeam = "0.8.0"
image = "0.23.14"
rlua = "0.17.0"

[profile.dev]
opt-level = 3